--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-slick": "^0.28.1",
     "react-toastify": "^9.0.5",
     "redux": "^4.1.0",
+    "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^1.1.2"
   },
